# retromate

./: .gitignore  CMakeLists.txt  README.md
cmake/: RetroMateTargets.cmake
src/: app.c  fics.c  fics.h  global.c  global.h  log.c  main.c  menu.c  menu.h  plat.h  ui.c  ui.h  usrinput.c
src/apple2/: buffers.s  hiresA2.s  platA2.h  platA2core.c  platA2draw.c  platA2net.c  retromate.hgr
src/atarixl/: buffers.s  dataAtari.c  hiresAtari.s  platAtari.h  platAtaricore.c  platAtaridraw.c  platAtarinet.c
src/c64/: buffers.s  dataC64.c  hiresC64.s  mouse_drv.s  platC64.h  platC64core.c  platC64draw.c  platC64net.c  swlinkC64.s
src/sdl2/: chess_pieces.h  platSDL2.h  platSDL2core.c  platSDL2draw.c  platSDL2net.c  proggyclean_font.h
